# X-Ray-Onyx-1.0

./: .gitignore  X-Ray Onyx.sln  X-Ray Onyx.vcxproj  XRayEngine.sln
Source/BugTrap/: BugTrap.rc  BugTrap.vcxproj  BugTrap.vcxproj.filters  InPlaceNew.h  SymEngine.cpp  SymEngine.h
Source/ETools/: CreateDX.cpp  D3DX_Wrapper.h  ETools.vcxproj  ETools.vcxproj.filters  StdAfx.h
Source/LWO/: LWO.vcxproj  LWO.vcxproj.filters
Source/minizip/: minizip.vcxproj
Source/xrAI/: xrAI.vcxproj  xrAI.vcxproj.filters
Source/xrCDB/: xrCDB.vcxproj  xrCDB.vcxproj.filters
Source/xrCompress/: xrCompress.vcxproj  xrCompress.vcxproj.filters
Source/xrCore/: LocatorAPI.h  LocatorAPI_Notifications.cpp  _stl_extensions.h  xrCore.rc  xrCore.vcxproj  xrCore.vcxproj.filters  xrCoreStatic.vcxproj  xrCoreStatic.vcxproj.filters  xrDebug.cpp  xrDebugNew.cpp  xrMemory_subst_borland.h  xrMemory_subst_msvc.h
Source/xrDXT/: DXT.vcxproj  DXT.vcxproj.filters
Source/xrLC/: xrLC.vcxproj  xrLC.vcxproj.filters
Source/xrLC/xrDO_Light/: xrDO_Light.vcxproj  xrDO_Light.vcxproj.filters
Source/xrLua/: xrLua.vcxproj  xrLua.vcxproj.filters
Source/xrLua/luabind/: CMakeLists.txt  config.hpp  types.hpp  weak_ref.cpp
Source/xrLua/luabind/detail/: class_rep.hpp
Source/xrNetServer/: xrNetServer.vcxproj
Source/xrODE/contrib/msvc7/ode_default/: default.vcxproj  default.vcxproj.filters
Source/xrOpenAL/OpenAL-Windows/Router/: OpenAL32.rc  Router.vcxproj  Router.vcxproj.filters
Source/xrParticles/: xrParticles.vcxproj  xrParticles.vcxproj.filters
Source/xrQSlim/: xrQSlim.vcxproj  xrQSlim.vcxproj.filters
Source/xrSE_Factory/: xrSE_Factory.vcxproj  xrSE_Factory.vcxproj.filters
Source/xrSound/: xrSound.vcxproj  xrSound.vcxproj.filters
Source/xrXMLParser/: xrXMLParser.vcxproj  xrXMLParser.vcxproj.filters
Source/xr_3da/: UpgradeLog.htm  XR_3DA.sln  XR_3DA.vcxproj  XR_3DA.vcxproj.filters
Source/xr_3da/stalker_net/: Stalker_net.vcxproj  Stalker_net.vcxproj.filters
Source/xr_3da/xrCPU_Pipe/: xrCPU_Pipe.vcxproj  xrCPU_Pipe.vcxproj.filters
Source/xr_3da/xrGame/: xrGame.vcxproj  xrGame.vcxproj.filters
Source/xr_3da/xrGame/xrD3D9-Null/: xrD3D9-Null.vcxproj  xrD3D9-Null.vcxproj.filters
Source/xr_3da/xrGame/xrGameSpy/: xrGameSpy.cpp  xrGameSpy.vcxproj  xrGameSpy.vcxproj.filters  xrGameSpy_MainDefs.h
Source/xr_3da/xrRender_R1/: xrRender_R1.vcxproj  xrRender_R1.vcxproj.filters
Source/xr_3da/xrRender_R2/: xrRender_R2.vcxproj  xrRender_R2.vcxproj.filters
Source/xr_3da/xrStatisticConvert/: Statistic.h  xrStatisticConvert.vcxproj  xrStatisticConvert.vcxproj.filters
Source/zlib/: example.c  zlib.vcxproj  zutil.h
libs/: BugTrap.exp  BugTrap.lib  OpenAL32.exp  OpenAL32.lib  minizip.idb  minizip.lib  ode.exp  ode.lib  xrD3D9-Null.exp  xrD3D9-Null.lib  xrGameSpy.exp  xrGameSpy.lib  xrQSlim.lib  zlib.idb  zlib.lib
libs/Debug/Win32/: zlib.idb  zlib.lib
